# all-in-one-homelab

./: .editorconfig  .gitignore  .mise.toml  .pre-commit-config.yaml  .vault-secrets.env.example  .yamllint  CHANGELOG.md  CLAUDE.md  Justfile  README.md
.claude/: settings.json
.claude/agents/: iac-reviewer.md  k8s-debugger.md
.claude/skills/argocd-app/: SKILL.md
.claude/skills/k8s-bootstrap/: SKILL.md
docs/adr/: 0001-record-architecture-decisions.md  0002-monorepo-with-extraction-path.md  0003-local-cluster-kind-cilium.md  0004-observability-victoria-stack.md  0005-ai-gateway-litellm-ollama-host.md  0006-secrets-management-vault.md  0007-sso-dex-github-oauth.md  0008-cilium-managed-by-argocd.md  0009-dex-static-clients-via-secretenv.md  0010-pocsmith-agentic-poc-factory.md  0011-vault-auto-unseal-via-secrets-env.md
docs/learning-notes/: local-ingress-dns-architecture.md
docs/releases/: RELEASE_TEMPLATE.md
platform/bootstrap/: README.md  argocd-install.yaml  cilium-values.yaml  kind-cluster.yaml
platform/gitops/: root-app.yaml
platform/gitops/applications/: -05-cilium.yaml  00-cert-manager.yaml  00-metrics-server.yaml  01-external-secrets.yaml  01-vault.yaml  02-cluster-secret-store.yaml  05-dex.yaml  05-ingress-nginx.yaml  05-platform-ingresses.yaml  05-reloader.yaml
platform/platform-services/argocd/: values.yaml
platform/platform-services/cert-manager/: values.yaml
platform/platform-services/dex/: values.yaml
platform/platform-services/dex/manifests/: oauth2clients.yaml
platform/platform-services/external-secrets/: values.yaml
platform/platform-services/external-secrets/manifests/: dex-secrets.yaml  (+2 more)
platform/platform-services/ingress-nginx/: values.yaml
platform/platform-services/ingresses/: argocd.yaml  dex.yaml  hubble-ui.yaml  vault-ui.yaml
platform/platform-services/metrics-server/: values.yaml
platform/platform-services/reloader/: values.yaml
platform/platform-services/vault/: OPERATIONS.md  values.yaml
projects/pocsmith/: .gitignore  .mise.toml  ATTRIBUTIONS.md  DESIGN.md  README.md  pyproject.toml
projects/pocsmith/roles/: README.md  pm.md
projects/pocsmith/src/pocsmith/: __init__.py  __main__.py  cli.py
projects/pocsmith/src/pocsmith/roles/: __init__.py  base.py  frontmatter.py
projects/pocsmith/tests/: test_frontmatter.py  test_role_base.py  test_smoke.py
scripts/: bootstrap.sh  coredns-homelab-patch.sh  vault-seed.sh  vault-setup-oidc.sh  vault-setup.sh
